# topoi

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  topoi.cabal
app/: topoic.hs
src/: Topoi.hs
src/Syntax/Parser/: TokenStream.hs
