cabal-version:       2.4
name:                topoi
version:             0.0.2.0
license-file:        LICENSE
author:              Zheng Yan PEH (zypeh)
maintainer:          zypeh.geek@gmail.com
category:            language
build-type:          Simple

tested-with:         GHC == 8.8.1

common haskell
    default-language:  Haskell2010

common ghc-warnings
    ghc-options:       -Wall -Werror -Wcompat -O2
    ghc-options:       -Wno-name-shadowing -Wredundant-constraints

common dependencies
    build-depends:     base
    -- When you really feel like being a tryhard, comment the pragmas.
    -- https://twitter.com/chris__martin/status/1196238372710187008

library
    import:            haskell, ghc-warnings, dependencies
    hs-source-dirs:    src
    exposed-modules:   Topoi

executable topoic
    import:            haskell, ghc-warnings, dependencies
    hs-source-dirs:    app
    main-is:           topoic.hs
    build-depends:     topoi