cabal-version:       2.4
name:                topoi
version:             0.0.2.0
license-file:        LICENSE
author:              Zheng Yan PEH (zypeh)
maintainer:          zypeh.geek@gmail.com
category:            language
build-type:          Simple

tested-with:         GHC == 8.8.1

-- When you really feel like being a tryhard, comment the pragmas.
-- https://twitter.com/chris__martin/status/1196238372710187008

common haskell
    default-language:  Haskell2010

common ghc-warnings
    ghc-options:       -Wall -Werror -Wcompat -O2
    ghc-options:       -Wno-name-shadowing -Wredundant-constraints

common dependencies
    build-depends:     base
                     -- parser combinator
                     , megaparsec

    default-extensions:
        -- Allow to use Applicative inside the do-block
        ApplicativeDo

        -- Allow the use of complex constraints in class declaration contexts.
        FlexibleContexts
        
        -- Allow definition of type class instances with arbitrary nested types
        -- in the instance head.
        FlexibleInstances

        -- Enabling the string literals which belongs to the `IsString`
        -- typeclass.
        OverloadedStrings

library
    import:            haskell, ghc-warnings, dependencies
    hs-source-dirs:    src
    exposed-modules:   Topoi

executable topoic
    import:            haskell, ghc-warnings, dependencies
    hs-source-dirs:    app
    main-is:           topoic.hs
    build-depends:     topoi